--- a/node/app/package.json
+++ b/node/app/package.json
@@ -7,18 +7,24 @@
   "scripts": {
     "start": "node build/index.js",
     "build_and_start": "yarn build && yarn start",
-    "dev": "nodemon --watch src/ --exec \"yarn build_and_start\"",
-    "build": "tsc --incremental"
+    "dev": "nodemon --watch src/* --exec \"yarn build_and_start\"",
+    "build": "tsc --incremental",
+    "prettify": "prettier ./ --write"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "nodemonConfig": {
-    "ignore": ["node_modules/**"]
+    "ignore": [
+      "node_modules/**"
+    ]
   }
 }
