--- a/rust/app/Cargo.toml
+++ b/rust/app/Cargo.toml
@@ -2,10 +2,12 @@
 name = "walking_duck"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [".", "api", "entity", "migration"]
+
 [dependencies]
-actix-web = "4"
-env_logger = "0.10.0"
-log = "0.4.19"
+api = { path = "api" }
