--- a/node/app/package.json
+++ b/node/app/package.json
@@ -12,12 +12,18 @@
     "prettify": "prettier ./ --write"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.2",
+    "redis": "^4.6.7",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
+    "@types/node": "^20.4.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "typescript": "^5.1.6"
