--- a/rust/app/api/Cargo.toml
+++ b/rust/app/api/Cargo.toml
@@ -18,3 +18,4 @@ migration = { path = "../migration" }
 entity = { path = "../entity" }
 sea-orm = { version = "0.12", features = ["sqlx-postgres","serde_json","with-chrono", "with-json", "macros"] }
 dotenv = "0.15.0"
+serde_json = "1.0.104"
