--- a/node/app/package.json
+++ b/node/app/package.json
@@ -12,17 +12,21 @@
     "prettify": "prettier ./ --write"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.2",
     "redis": "^4.6.7",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
