--- a/rust/app/api/Cargo.toml
+++ b/rust/app/api/Cargo.toml
@@ -18,4 +18,9 @@ migration = { path = "../migration" }
 entity = { path = "../entity" }
 sea-orm = { version = "0.12", features = ["sqlx-postgres","serde_json","with-chrono", "with-json", "macros"] }
 dotenv = "0.15.0"
-serde_json = "1.0.104"
+serde_json = "1.0.105"
+serde = "1.0.183"
+futures-util = "0.3.28"
+chrono = { version = "0.4.26", features = ["serde"] }
+actix-web-actors = "4.2.0"
+actix = "0.13.0"
