--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     network_mode: bridge
     env_file: ./env
     environment:
-      - RUST_ENV=dev
+      - RUST_ENV=prod
       - RUST_LOG=debug
     depends_on:
       - db
