--- a/node/app/package.json
+++ b/node/app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-ws": "^3.0.1",
     "@types/morgan": "^1.9.4",
