--- a/rust/app/api/Cargo.toml
+++ b/rust/app/api/Cargo.toml
@@ -10,8 +10,6 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = "4"
-env_logger = "0.10.0"
-log = "0.4.19"
 redis = { version = "0.23.1", features = ["tokio-comp"] }
 tokio = { version = "1.32", features = ["full", "rt"] }
 migration = { path = "../migration" }
@@ -25,3 +23,6 @@ chrono = { version = "0.4.26", features = ["serde"] }
 actix-web-actors = "4.2.0"
 actix = "0.13.0"
 actix-ws = "0.2.5"
+tracing-actix-web = "0.7.6"
+tracing-subscriber = { version = "0.3.17", features = [] }
+tracing = "0.1.37"
