--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     network_mode: bridge
     env_file: ./env
     environment:
-      - RUST_ENV=prod
+      - RUST_ENV=dev
       - RUST_LOG=debug
     depends_on:
       - db
