--- a/rust/app/api/Cargo.toml
+++ b/rust/app/api/Cargo.toml
@@ -26,3 +26,4 @@ actix-ws = "0.2.5"
 tracing-actix-web = "0.7.6"
 tracing-subscriber = { version = "0.3.17", features = [] }
 tracing = "0.1.37"
+actix-cors = "0.6.4"
